<resources>
    <string name="toolbar_welcome_subt" translatable="true">A tour in the Old Town</string>
    <string name="toolbar_places_subt" translatable="true">Sites of interest</string>
    <string name="toolbar_map_subt" translatable="true">Feel free to move around</string>
    <string name="toolbar_map_title" translatable="true">Old Town</string>
    <string name="city_name" translatable="true">City of Bari</string>
    <string name="menu_places" translatable="true">Places</string>
    <string name="menu_welcome" translatable="true">Home</string>
    <string name="menu_map" translatable="true">Map</string>
    <string name="menu_change_language" translatable="true">Passa ad Italiano</string>
    <string name="projTitle" translatable="true">Searching our roots</string>
    <string name="projAim" translatable="true">La conoscenza, la tutela e la valorizzazione del proprio territorio e del relativo patrimonio storico, artistico e paesaggistico sono gli obiettivi fondanti del progetto denominato “Alla ricerca delle nostre radici”.
Creare per gli alunni occasioni di consapevolezza e di espressione culturale, con riguardo alle competenze relative all\’identità storica e sociale, è uno dei compiti precipui di una scuola rinnovata, attenta  "all\'ambiente" e al suo patrimonio culturale.
Il progetto ha condotto i ragazzi, che ne sono stati attori protagonisti, a
comprendere il cambiamento e la diversità dei tempi storici in una dimensione sia diacronica che sincronica attraverso il confronto fra epoche e fra territori diversi.
"L\'importanza dell\'azione" di tutela del patrimonio storico e culturale in quanto valore materiale ed etico "dell\'eredità" storica regionale e locale, insieme ad un riconoscimento del valore e delle potenzialità dei beni artistici e ambientali, per una loro corretta fruizione e valorizzazione, costituiscono le premesse di un impegno sostanziale per un attiva cittadinanza in difesa del proprio territorio sociale, culturale e naturale.</string>
    <string name="projInfoButtonLabel">the project →</string>
    <string name="historyTitle">A bit of History</string>
    <string name="history" translatable="true">Bari is an ancient-born city, with its first recorded settlements dating II millennium b.C.\n
In III century, the city was an important port for the people living in the Peucetia region; it got conquered by Romans, turned into a Municipium (a kind of colony), and then got involved in the battles between Byzantines and Lombards.
In 1071 the Normans took the city, and the first crusade upon the Holy Land sailed from its port.
In the XIII century, Bari was achieved by Federico II the Swabian and became a farily large trading center; it fell down when the Angevins arrived, and raised again with the "Sforza\'s" dinasty, thanks to Isabella "D\'Aragona" and her daughter, Bona Sforza duchess of Bari.
In the XVI century fell under Spanish domination first, and "Bourbons\' domination" then, before becoming part of the "Savoia\'s" reign with the Unity of Italy, in 1861.</string>
    <string name="historyButtonLabel">History →</string>
    <string name="place_basilicaSanNicola_title">Basilica of St. Nicholaus</string>
    <string name="place_bedDrinkFood_title">Bed Drink Food</string>
    <string name="place_capaDelTurco_title">Testa Del Turco - Oak Street</string>
    <string name="place_casaPiccinni_title">"Piccinni\'s" House</string>
    <string name="place_castelloSvevo_title">Swabian Norman Castle</string>
    <string name="place_cattedrale_title">Cathedral of Saint Sabino</string>
    <string name="place_cisternaBonaSforza_title">Cistern of Bona Sforza</string>
    <string name="place_colonnaInfame_title">Colonna Infame</string>
    <string name="place_exultet_title">Exultet</string>
    <string name="place_fontanaDellaPigna_title">Fontana della Pigna</string>
    <string name="place_fortino_title">Fortino</string>
    <string name="place_isolato49_title">Line 49</string>
    <string name="place_palazzoDelSedile_title">Palazzo Del Sedile</string>
    <string name="place_piazzaFerrarese_title">Ferrarese Square</string>
    <string name="place_piazzaMercantile_title">Mercantile Square</string>
    <string name="place_piazzaOdegitria_title">Odegitria Square</string>
    <string name="place_sanGregorio_title">Church of San Gregorio</string>
    <string name="place_santaMariaDelBC_title">Church of Santa Maria del Buon Consiglio</string>
    <string name="place_santAnna_title">"Sant\'" Anna Church</string>
    <string name="place_santaScolastica_title">Santa Scolastica</string>
    <string name="place_viaAppia_title">Via Appia</string>
    <string name="place_viaVenezia_title">Via Venezia</string>
    <string name="place_basilicaSanNicola_content">The Basilica of St. Nicholas in the heart of the old town in Bari, is one of the most shining examples of Apulian-Romanesque architecture. It was built between 1087 and 1100, during the Norman Rule to house the relics of St. Nicholaus from Myra, a city of Licia in Asia Minor.
Initially the rests of the Saints were systematized in the monastery of S. Benedict, held up by the abbot Elia. In the turn of little time it was chosen to build the new building and in 1087 they began the jobs. Was chosen the area that few years earlier had housed the palace of catapan. Two years later, in October of 1089, the relics of St. Nicola were deposed in the crypt of the basilica stolen by sixty-two sailors baresi. For its construction it was used part of the materials coming from the "governor\'s palace", namely the "Kastron".
The Basilica is today used not only to house the relics, but also to pray, according to both the Christian rite-both catholic and according to the orthodox Christian rite.</string>
	<string name="place_bedDrinkFood_content">The Old Borough of Bari is an interesting place to discover.
If you are planning to spend a weekend exploring the city, then the Borough offers some quaint and picturesque B&amp;Bs. Renowned for their locations and their architecture, these B&amp;Bs will be the ideal starting point for your stroll along the seaside or for your exploration of the alleys of the Borough.
Particularly noteworthy are the B&amp;B in Strada Annunziata, 2, located on top of “La Muraglia”, the ancient ramparts that for centuries have protected the Borough from enemy invasions, and “La Uascezze” B&amp;B in Vico Agostino, 2 which offers also a restaurant and its renowned for its location and for the hospitality and friendliness of its staff. If you fancy sipping a drink while enjoy the evening breeze and the view of the sea, then a stroll on “La Muraglia” will give you an ample choice of pubs and cocktail bars, otherwise you can enjoy the lively Piazza del Mercantile and Piazza del Ferrarese with their trendy coffee shops, bars and restaurants, that especially during Summer offer live music as well.
After a long day spent exploring, you may want to take a break and just taste all that the cooking tradition of the city has to offer.
Simplicity is a key word in the traditional cooking of this city. Traditional dishes of Bari are the result of a skilful mix of ingredients that come from the Earth and the Sea, slow cooked to better enhance the taste. Vegetables, beans, lentils, herbs but also fish and sea food, all seasoned with either locally produced extra-virgin olive oil or lemon juice as dictated by the Mediterranean diet.
Some of the most famous dishes you will be able to taste include homemade Orecchiette (pasta) with tomato suace or with locally produced fresh vegetables, and the iconic “Tiella di patate, cozze e riso”, a local version of the famous Spanish Paella, with rice, potatoes, tomato sauce and mussels.
The list of dishes does not end here, however the best way to taste and enjoy all that the culinary tradition has to offer is to take a stroll through the alleys of the Borough and let yourself be inspired by the mouthwatering scents coming from the various restaurants and inns dotting the Borough.
Noteworhty restaurants are “La Uascezze”, that offers many traditional dishes; “La Cantina di Cianna Cianne” in vico Corsioli, 3, one of the oldest and most picturesuqe restaurants of the Borough, where you will be able to enjoy the traditional tastes of homemade cooking . Otherwise, have a peek and enjoy the feeling of eating in a real tavern. Founded in 1815, the “ Antica Osteria delle Travi” in Largo Chiurlia, 12 offers tasty dishes.</string>
    <string name="place_capaDelTurco_content">Oak street, which is located on the left straight along San Gregorio’s church, has the name of a family from Bari. It leads to St Chiara’s street and there is an interesting particular, that you can see after a short stretch. On the top of a door there is a very ancient sculpture that represents a rough Turkish head made of stone. Its name is “La cape du turchie”. The sculpture is very ancient. It is said that every day during the night the troubled soul of the Turkish wanders to look for the person who killed him.</string>
    <string name="place_casaPiccinni_content">Niccolò Piccinni was a great  composer from Bari, in the  17th century. His home is located in the  old city centre, not far from the fountain in “Vico Fiscardi”.Nobody knows if he was really born in that  house, but his family lived there for sure. Today the house has become the venue of the association  "I luoghi della musica", and hosts the original printed editions of his works, and of southern authors of the centuries XVII - XX.
The house of the composer has been transformed into a place of diffusion of the Apulian musical heritage.</string>
    <string name="place_castelloSvevo_content">The Swabian Norman Castle is an imposing fortress of the Middle Ages on the edge of the old town.The fortification was built in the 1131 by the Norman King Ruggero II  on  pre – existing Byzantine structures. Destroyed by  Guglielmo I said the Malo on the 1156 year, the castle was rebuilt by Federico II of  Svevia from the 1233 year to 1240 year. During the angioino’s  period Carlo I  made important  restoration works . In the 1500 duchesses of Bari, Isabella d’ Aragona  and  her  daughter Bona  Sforza  instituted a refined  renaissance  court in the castle.  In 1800  it was  a  prison  and  later a  barrack. Currently  some of  the rooms are intended to Gipsoteca and  other  temporary  exhibitions. Now the castle  is  present surrounded by the moat that rums along three  parts, except for the northern  range, once  upon a time wet by  the sea.</string>
    <string name="place_cattedrale_content">The cathedral of Bari, dedicated to Saint Sabino, Canosa’s bishop, is located in the heart of Bari’s ancient village. It was built in the first half of XI century by archbishop Bisanzio and It was destroyed in the 1156 by norman Guglielmo I named the Malo. About the end of the XII century it was rebuilt by the archbishop Rainaldo using the materials of the previous churches and other destroyed buildings. The church is in style Romanic- Pugliese, heardquarters of the Archdiocese of Bari- Bitonto, it was a reference  for the clergy and for the citizen’s political power. It preserves the relics of Saint Sabino , the icon of the Madonna Odegitria and spoils of the Saint Colomba of Sens. In the Dioesano museum, attached to the cathedral, there are  four liturgical rolls from the XI century with the scriptur nomined Bari Type.</string>
    <string name="place_cisternaBonaSforza_content">In San Bisanzio and Rainaldo square, there is one of the cisterns costructed in XVI century by Bona Sforza, queen of Poland, daughter of the Duchess of Bari, Isabella D’Aragona.
In the cistern water was picked up to quench thirsty of people in town during the warm summer months.
Today the cistern is not used, but it has an inestimable value for the history of this city.</string>
</resources>