<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/app_name"
        app:subtitle="@string/toolbar_welcome_subt"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <revolver.bari.views.InfoCard
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/projCard"
                app:title="@string/projTitle"
                app:contentText="@string/projAim"
                app:buttonText="@string/projInfoButtonLabel"/>

            <revolver.bari.views.InfoCard
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/historyCard"
                app:title="@string/historyTitle"
                app:contentText="@string/history"
                app:buttonText="@string/historyButtonLabel"/>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>